# openvins_realsense

./: .gitignore  README.md  build.sh  calc_transforms.py  fix_quats.py  run.sh  test_back_inv.py  test_cams.py  test_comp.py  test_comp2.py  test_inv.py  test_inv2.py  test_inv3.py  test_quats.py  test_tf.py  test_trans.py  test_yaw.py  tf_ned_calc.py
docker/: Dockerfile
src/odometry_tracker/: CMakeLists.txt  package.xml
src/odometry_tracker/src/: base_link_path_pub.cpp  odom_to_baselink.cpp
src/openvins_bringup/: CMakeLists.txt  package.xml
src/openvins_bringup/config/: default.rviz  ekf.yaml  estimator_config.yaml  estimator_config_back.yaml  estimator_config_front.yaml  kalibr_imu_chain_back.yaml  kalibr_imucam_chain.yaml  kalibr_imucam_chain_back.yaml  kalibr_imucam_chain_front.yaml  single.rviz
src/openvins_bringup/launch/: launch_openvins.launch.py  launch_openvins_back.launch.py  launch_openvins_dual.launch.py
utils/: back_session.yml  dual_session.yml  session.yml  single_ekf_session.yml
