<?xml version="1.0"?>
<package format="3">
  <name>odometry_tracker</name>
  <version>1.0.0</version>
  <description>Odometry processing: path publisher and IMU-to-baselink transformer</description>
  <maintainer email="gianmarco@todo.todo">Gianmarco</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
