<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvins_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for OpenVINS and RealSense</description>
  <maintainer email="gianmarco@example.com">gianmarco</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ov_msckf</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>base_link_path_pub</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
